--- a/scss/components/_clinicDescription.scss
+++ b/scss/components/_clinicDescription.scss
@@ -3,11 +3,26 @@
     grid-template-columns: 1fr 1fr;
     min-height:60vh;
     gap: 10rem;
-    &__img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: map-get($borderRadius, l);
+
+    &__imgWrapper {
+        position:relative; 
+
+        &__logo {
+            position: absolute;
+            width:110px;
+            top: -15px;
+            right: -15px;
+            object-fit:cover;
+            // border-radius: map-get($borderRadius, l);
+            box-shadow: map-get($boxShadow, small);
+        }
+
+        &__img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: map-get($borderRadius, l);
+        }
     }
 
     &__description {
@@ -55,6 +70,12 @@
         gap: 2rem;
         min-height: unset;
         
+        &__imgWrapper {
+            &__logo {
+                left: 50%;
+                transform: translateX(-50%);
+            }
+        }
         &__description {
             &__title, 
             &__content {
