--- a/scss/components/_gallery.scss
+++ b/scss/components/_gallery.scss
@@ -13,5 +13,6 @@
     }
     @include media(tablet) {
         padding: 2rem;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 }
